# pyTMHMM

./: .gitignore  README.md  pyproject.toml  setup.py
pyTMHMM/: hmm.pyx
